<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTotal"
        android:id = "@+id/tvSubTotal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="30dp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="8"
        android:id="@+id/etSubTotal"
        android:text="@string/billAmount"
        android:textSize="20sp"
        android:layout_alignTop="@id/tvSubTotal"
        android:layout_toRightOf="@id/tvSubTotal"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/tvSubTotal"
        android:layout_marginLeft="80dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDiscount_percent"
        android:text="@string/discount_percent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/tvSubTotal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDiscount_percent_number"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/discountPercentNumber"

        android:layout_alignBottom="@id/tvDiscount_percent"
        android:layout_alignStart="@id/etSubTotal"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDown"
        android:textSize="20sp"
        android:text="@string/buttonDown"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tvDiscount_percent_number"
        android:layout_alignBaseline="@id/tvDiscount_percent_number"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnUp"
        android:textSize="20sp"
        android:text="@string/buttonUp"
        android:layout_marginLeft="5sp"
        android:layout_toRightOf="@id/btnDown"
        android:layout_alignBaseline="@id/tvDiscount_percent_number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDiscountAmount"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/discountAmount"
        android:layout_below="@id/tvDiscount_percent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDiscountAmountNumber"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/discountAmountNumber"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvDiscount_percent_number"
        android:layout_alignBaseline="@id/tvDiscountAmount"
        android:layout_alignStart="@id/tvDiscount_percent_number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/total"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvDiscountAmount"
        android:layout_marginTop="40dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalAmountNumber"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/totalAmount"
        android:layout_below="@id/tvDiscountAmountNumber"
        android:layout_alignStart="@id/tvDiscountAmountNumber"
        android:layout_alignBaseline="@id/tvTotal"/>
</RelativeLayout>